fix light dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ button {
   cursor: pointer;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -53,4 +53,4 @@ button {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
